<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->
    // Election Item
    <string name="item_election_name">Election name</string>
    <string name="item_election_day">Election day</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>

    // Representative Item
    <string name="representative_name">Representative Name</string>
    <string name="representative_party">Representative Party</string>
    <string name="facebook_link">Representative Facebook link</string>
    <string name="twitter_link">Representative Twitter link</string>
    <string name="web_link">Representative Website link</string>

    // Voter Information
    <string name="voter_information_day">12 November 2055</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="state_information">State Information</string>
    <string name="voter_address">Voter Address</string>

    // Representative
    <string name="facebook_link_invalid">Facebook link is not exist!</string>
    <string name="twitter_link_invalid">Twitter link is not exist!</string>

    // Toolbar
    <string name="voter_info_title">Voter Information</string>

    <string name="launching_logo_description">Launching logo for Political Preparedness</string>

    <string name="representatives_search">Representatives Search</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="my_representatives">My Representatives</string>

    <string name="use_my_locations">Use my location</string>

    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="link_invalid">Link is Not Valid!</string>

    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled to use this feature</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>

    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>

    <string name="facebook_link_description">Navigate to Facebook of representative</string>
    <string name="twitter_link_description">Navigate to Twitter of representative</string>
    <string name="www_link_description">Navigate to Website of representative</string>


    <string name="image_launch_description">Image Background Launch</string>
    <string name="upcoming_button">UPCOMING ELECTIONS</string>
    <string name="find_button">FIND MY REPRESENTATIVES</string>
    <string name="upcoming_title">Upcoming Elections</string>
    <string name="saved_election">Saved Elections</string>
    <string name="election_info">Election Information</string>
    <string name="voting_location">Voting Locations</string>
    <string name="ballot_info">Ballot Information</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="save_button">Save Button</string>
    <string name="representative_search">Representative Search</string>
    <string name="line1_hint">Address Line 1</string>
    <string name="line2_hint">Address Line 2</string>
    <string name="city_hint">City</string>
    <string name="location_button">USE MY LOCATION</string>
    <string name="my_representative">My Representatives</string>
    <string name="icwww_link">ICWWW LINK</string>
    <string name="enable_location_please">Enable Location, Please!</string>

</resources>
