<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/representativePhoto"
            profileImage="@{representative.official.photoUrl}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@{representative.official.name}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/positionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_horizontal"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toTopOf="@+id/representativePhoto" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{representative.official.name}"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toBottomOf="@+id/positionText" />

        <TextView
            android:id="@+id/partyText"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="@+id/representativePhoto"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/icwww_link"
            app:layout_constraintBottom_toBottomOf="@+id/partyText"
            app:layout_constraintStart_toEndOf="@+id/partyText"
            app:layout_constraintTop_toTopOf="@+id/partyText"
            app:layout_constraintVertical_bias="0.4"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/facebook_link"
            app:layout_constraintBottom_toBottomOf="@+id/wwwIcon"
            app:layout_constraintStart_toEndOf="@+id/wwwIcon"
            app:layout_constraintTop_toTopOf="@+id/wwwIcon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/twitter_link"
            app:layout_constraintBottom_toBottomOf="@+id/facebookIcon"
            app:layout_constraintStart_toEndOf="@+id/facebookIcon"
            app:layout_constraintTop_toTopOf="@+id/facebookIcon"
            app:srcCompat="@drawable/ic_twitter" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>